# moordyn-syrope-tests

./: .gitignore  CMakeLists.txt  README.md  main.cpp
input/exp_wc/: line.txt
input/linear_wc/: line.txt
input/quadratic_wc/: line.txt
scripts/: initial_conditions.py  mean_tension_verification.py  syropepy.py
